# amrita-biosignal-feature-engine

./: .gitignore  CHANGES.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  release.yml.disabled
benchmarks/: README.md  __init__.py  benchmark_baseline.py  benchmark_lz76_remediation.py
benchmarks/results/: baseline-before-version-cache.json  baseline.json  lz76-remediation.json  profiles-before-version-cache.md  profiles.md  v0.2.0-dev-baseline.json  v0.2.0-dev-profiles.md
docs/: api-design.md  api-reference.md  complexity-validation.md  entropy-validation.md  performance-baseline.md  psd.md  release-readiness.md  release-workflow.md  v0.2.0-integration-inventory.md  v0.2.0-release-readiness.md  validation.md
examples/: api_smoke_test.py
scripts/: check_artifacts.py  smoke_installed.py
src/amrita_biosignal_feature_engine/: __init__.py  complexity.py  diagnostics.py  extractor.py  feature_registry.py  frequency_domain.py  psd.py  time_domain.py  validation.py
src/amrita_biosignal_feature_engine/entropy/: __init__.py  approximate.py  distribution.py  fuzzy.py  permutation.py  sample_entropy_profile.py  svd.py
tests/: test_approximate_entropy.py  test_complexity.py  test_distribution_entropy.py  test_extractor.py  test_extractor_models.py  test_feature_registry.py  test_frequency_domain.py  test_fuzzy_entropy.py  test_lz76_exhaustive.py  test_permutation_entropy.py  test_psd.py  test_public_api.py  test_sample_entropy_profile.py  test_svd_entropy.py  test_time_domain.py  test_validation.py
tests/reference/: test_approximate_entropy_reference.py  test_complexity_reference.py  test_distribution_entropy_reference.py  test_fuzzy_entropy_reference.py  test_multitaper_reference.py  test_permutation_entropy_reference.py  test_sampen_profile_reference.py  test_spectral_entropy_reference.py  test_svd_entropy_reference.py
